--- a/packages/silex-lib/src/less/fileexplorer.css
+++ b/packages/silex-lib/src/less/fileexplorer.css
@@ -2,5 +2,6 @@
 	position: absolute;
 	z-index: 210;
 	width: 80%;
-	max-width: 929px; /* max width defined in the cloud explorer css */
+	max-width: 929px; /* defined in the cloud explorer css */
+  height: 574px; /* defined in the cloud explorer css */
 }
